# jiujie

./: .gitignore  Cargo.toml  README.md  README_EN.md  TDD_SUMMARY_WANJIAN_FOUR_PHASE.md  azure-pipelines.yml  build.rs  build_installer.bat  build_msix.bat  savegame.json
.cargo/: config.toml
.github/workflows/: release.yml
assets/3d/: berry_cluster.glb  bush_cluster.glb  cloud.glb  fantasy_armored_warrior.glb  fantasy_character.glb  fantasy_warrior.glb  fantasy_wolf.glb  glowing_rune_stone.glb  green_shrub.glb  ornate_green_spider.glb  player.glb  rock.glb  stylized_lantern.glb  stylized_warrior.glb
assets/icons/: icon.icns
docs/: PRIVACY.md  wanjian_nan_fix_summary.md  头条号-九界渡劫技术文章.md
logs/: jiujie.log.2026-01-31
scripts/: check_music_files.sh  check_sfx_files.sh  convert_existing_sfx_to_ogg.sh  convert_mp3_to_ogg.sh  generate_curl_noise.py  process_icons.py  replace_music_placeholders.sh  replace_sfx_placeholders.sh
src/: lib.rs  main.rs
src/components/: after_image.rs  animation.rs  audio.rs  audio.rs.backup  background_music.rs  background_music.rs.backup  cards.rs  combat.rs  cultivation.rs  dialogue.rs  hit_stop.rs  map.rs  mod.rs  particle.rs  particle.rs.bak  particle.rs.bak2  particle.rs.bak3  relic.rs  screen_effect.rs  shop.rs  sprite.rs
src/plugins/: hand_ui_v2.rs  mod.rs  mod.rs.backup2  mod.rs.bak  mod.rs.bak_delay  opening.rs
src/resources/: mod.rs  save.rs
src/states/: mod.rs
src/systems/: after_image.rs  animation.rs  audio.rs  background_music.rs  enemy_gen.rs  event.rs  gpu_particle.rs  hit_stop.rs  map.rs  mod.rs  particle.rs  particle.rs.bak3  particle.rs.bak_fix  particle.rs.bak_white  particle.rs.bak_white2  relic.rs  rest.rs  screen_effect.rs  shop.rs  sprite.rs  ui.rs  (+1 more)
store/: AppxManifest.xml
tests/: BACKGROUND_MUSIC_BASELINE.md  DEVELOPMENT_NOTES.md  INTEGRATION_TEST_GUIDE.md  MAP_DIFFICULTY_BASELINE.md  MAP_REFACTOR_TEST_BASELINE.md  MIGRATION_GUIDE.md  REFACTORING_SUMMARY.md  REFACTOR_STABILITY_BASELINE.md  SOUND_EFFECTS_BASELINE.md  TEST_BASELINE_2026_02_07.md  WANJIAN_SFX_VFX_BASELINE.md  adaptive_impact_tdd.rs  after_image_expansion_tdd.rs  after_image_tdd.rs  animation_integration_tdd.rs  animation_mapping_optimization_tdd.rs  animation_state_check_tdd.rs  animation_visibility_debug_tdd.rs  aoe_skills_tdd.rs  app_startup_test.rs  arena_assets_tdd.rs  arena_decoration_tdd.rs  audio_system_tdd.rs  background_music_tdd.rs  balance_simulation_tdd.rs  boss_mechanics_tdd.rs  boss_v2_ai_tdd.rs  breakthrough_button_fix_tdd.rs  breakthrough_button_hover_hang_tdd.rs  bug_fix_tdd.rs  bug_repro_hangs.rs  bug_repro_map_layout.rs  card_animations_tdd.rs  card_upgrade_tdd.rs  character_3d_tdd.rs  character_orientation_tdd.rs  cloud_mist_vfx_tdd.rs  combat_3d_tdd.rs  combat_cleanup_tdd.rs  combat_reentry_integration.rs  (+173 more)
wix/: License.rtf  jiujie.wxs  jiujie.wxs.template  main.wxl  main.wxl.template  main.wxs  zh-CN.wxl
(+24 files in other folders)
