[package]
name = "bevy_card_battler"
version = "0.1.0"
edition = "2021"
authors = ["PeterFei"]
description = "九界：渡劫 - 修仙肉鸽卡牌游戏"
repository = "https://github.com/peterfei/bevy_card_battler"
license = "MIT OR Apache-2.0"

[dependencies]
# Bevy 0.15.x
bevy = { version = "0.15", features = ["mp3"] }

# 图像处理
image = "0.25"

# 随机数生成
rand = "0.8"
rand_core = "0.6"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
# 仅在 Windows 下使用 winres
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true