[package]
name = "bevy_card_battler"
version = "0.1.0"
edition = "2021"
authors = ["PeterFei"]
description = "九界：渡劫 - 修仙肉鸽卡牌游戏"
repository = "https://github.com/peterfei/bevy_card_battler"
license = "MIT OR Apache-2.0"

[dependencies]
# Bevy 0.15.x - 移除 x11，恢复跨平台自动适配
bevy = { version = "0.15", features = ["mp3", "vorbis"] }

# 图像处理
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true