[package]
name = "bevy_card_battler"
version = "0.1.0"
edition = "2021"
authors = ["PeterFei"]
description = "九界：渡劫 - 修仙肉鸽卡牌游戏"
repository = "https://github.com/peterfei/bevy_card_battler"
license = "MIT OR Apache-2.0"

[dependencies]
# Bevy 0.15.x - 移除默认特性，精准控制以避免跨平台链接错误
bevy = { version = "0.15", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis", # 统一使用 ogg vorbis
    "mp3",
    "x11",
    "tonemapping_luts",
    "default_font",
    "bevy_pbr",
    "bevy_picking",
    "bevy_state"
] }

# 图像处理 (用于运行时加载图标)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
winit = "0.30"

rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
tracing-appender = "0.2.4"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[[bin]]
name = "jiujie"
path = "src/main.rs"
